CS4067-Eventbooking/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: online-event-booking-hashim  # Namespace for all services
