CS4067-Eventbooking/kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: online-event-booking-hashim
spec:
  replicas: 2
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: hashimawan/microservices-booking-service:latest
          ports:
            - containerPort: 5002

---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: online-event-booking-hashim
spec:
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 5002
      targetPort: 5002
  type: ClusterIP
