CS4067-Eventbooking/kubernetes/deployment-service-event.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: online-event-booking-hashim
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: hashimawan/microservices-events_service:latest
          ports:
            - containerPort: 5001

---
apiVersion: v1
kind: Service
metadata:
  name: event-service
  namespace: online-event-booking-hashim
spec:
  selector:
    app: event-service
  ports:
    - protocol: TCP
      port: 5001
      targetPort: 5001
  type: ClusterIP
