CS4067-Eventbooking/kubernetes/deployment-service-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: online-event-booking-hashim
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: hashimawan/microservices-user_service:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: online-event-booking-hashim
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
